# cognitive-cell

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
data/: holdout_v2_500_reviewed.jsonl
docs/: ABLATION_100_REPORT.md  ABLATION_PLAN.md  API_REFERENCE.md  CLAIMS_AND_LIMITATIONS.md  COMPONENT_ABLATION_100_REPORT.md  COMPONENT_ABLATION_10_REPORT.md  COMPONENT_ABLATION_30_REPORT.md  COMPONENT_ABLATION_PLAN.md  COST_CONTROL_PLAN.md  ENTERPRISE_INTEGRATION_GUIDE.md  EVALUATION_METHODOLOGY.md  EVALUATION_SUMMARY.md  HOLDOUT_V2_100_DRAFT_REPORT.md  HOLDOUT_V2_500_FINAL_REPORT.md  HOLDOUT_V2_500_REVIEW_PROGRESS.md  HOLDOUT_V2_50_EVAL_SMOKE_REPORT.md  HOLDOUT_V2_50_SEED_REVIEW.md  HOLDOUT_V2_DESIGN.md  HOLDOUT_V2_WEAK_FAMILY_DIAGNOSTIC_PLAN.md  HOLDOUT_V2_WEAK_FAMILY_DIAGNOSTIC_REPORT.md  HUMAN_EVALUATION_PROTOCOL.md  INDEX.md  MASTER_EVIDENCE_SUMMARY.md  NEXT_ACTIONS_AFTER_IMPORT.md  PACKAGING_ROADMAP_V9.md  PILOT_100_REPORT.md  PILOT_PLAN_ANALYTICS_SIDECAR.md  POST_V9_ROADMAP.md  QUICKSTART.md  QUICKSTART_VALIDATION.md  REPORT_POLISH_CHECKLIST.md  TECHNICAL_REPORT_DRAFT.md  TECHNICAL_REPORT_OUTLINE.md  V10_DEV_100_REVIEW_REPORT.md  V10_DEV_20_EVAL_SMOKE_REPORT.md  V10_DEV_PLAN.md  V9_STATUS_AND_NEXT_STEPS.md
examples/: event.example.json  run_all_v9_demos.py  run_enterprise_sidecar_demos.py  run_pilot_analytics_sidecar.py  run_pilot_sidecar_batch_cached.py  v9_basic_demo.py  v9_enterprise_event_adapter_demo.py  v9_enterprise_sidecar_demo.py  v9_import_demo.py  v9_planning_demo.py  v9_sidecar_json_payload_demo.py  v9_urgent_context_demo.py
(+36 files in other folders)
